A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped forward slash restriction in "Tag name" and "Tag for matching" (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
...G...... [ZBX-11292] fixed getting network interface statistics on Oracle Solaris 10/11 (Andris)
A......... [ZBX-11125] prohibited zero in first parameter of nodata() trigger function (Sasha, vso)
........S. [ZBX-11349] removed possibility to create items, triggers and graphs with empty names after low level discovery macro substitution (Sergejs)
........S. [ZBX-11310] fixed event tag conditions checking, that contains operator 'not like' or '<>' in events without tags (Sergejs)
A......... [ZBX-11244] fixed parsing of JSON text when PHP is compiled without JSON library (Cemeris)
..F....... [ZBX-11219] renamed second argument for net.dns and net.dns.record items from "zone" to "name" (Cemeris)
..F....... [ZBX-8457] fixed user macro resolving for templated host and templates (Oleg)
..F....... [ZBX-11367] fixed xml import when non-snmp interfaces have incorrect parameter "bulk" (Gunars)
..F....... [ZBX-10388] removed duplicated data and reduced traffic for hint popups (Gunars)
..F....... [ZBX-11331] fixed JS error in Configuration->Discovery edit page (Oleg)
...G...... [ZBX-10906] fixed agent active checks being delayed if system time was pushed back (wiper)
..F....... [ZBX-11324] fixed undefined index in screen and map import pages (Oleg)
....I..... [ZBX-11038] removed compression for the generated CSS files, added "sass" folder to the distribution archive (asaveljevs)
....I..... [ZBX-11335] added MariaDB database support when compiling with --with-mysql configuration option; thanks to Dmitry Smirnov for patch (viktors)